# periodicity

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: periodicity-deploy.yml  periodicity-tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
docs/guide/: core.rst  decomposition.rst  gp.rst  phase.rst  spectral.rst  timefrequency.rst
docs/source/: api.rst  conf.py  gp.rst  index.rst  phase.rst  spectral.rst  template.tpl
docs/source/_static/notebooks/: fastgp.ipynb  wavelet.ipynb
docs/tutorials/: fastgp.ipynb  hht.ipynb  wavelet.ipynb
periodicity/: __init__.py  acf.py  gp.py  periodogram.py  phase.py  spectral.py  utils.py
periodicity/data/: lightcurve1.npy  lightcurve2.npy  load.py
periodicity/tests/: test_gp.py  test_spectral.py
periodicity/tests/data/: lightcurve1.csv  lightcurve2.csv
src/periodicity/: __init__.py  core.py  decomposition.py  gp.py  phase.py  spectral.py  timefrequency.py
src/periodicity/data/: __init__.py  sunspots.npy  tsi.npy
tests/: test_core.py  test_decomposition.py  test_gp.py  test_spectral.py
