[build-system]
requires = ["setuptools>=46.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = true
src_paths = ["src/periodicity"]
skip_gitignore = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]
parallel = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
